--- a/templates/account/password/index.html.twig
+++ b/templates/account/password/index.html.twig
@@ -9,7 +9,7 @@
                 {% include 'account/_menu.html.twig' %}
             </div>
             <div class="col-md-8">
-                <h3>Mofication de mon mot de passe de Nico</h3>
+                <h3>Modification de mon mot de passe</h3>
                 {{ form(modifyPassword) }}
             </div>
         </div>
